trying to figure horizontal scrollbar needs to be fixed

--- a/client/src/components/navbar/forms/login.css
+++ b/client/src/components/navbar/forms/login.css
@@ -1,3 +1,4 @@
-#makeStyles-root-289 {
-  min-height: 0;
+#login-container {
+  /* margin is: top right bottom left */
+  /* margin: 50px 200px 50px 200px; */
 }
